2007-09-10  Dmitry Dulepov  <dmitry@typo3.org>

 * Fixed bug 4994: tx_realurl_pathcache must not be flushed!
 * Fixed bug 5150: Remove tx_realurl_pathcache table from MySQL Query Cache

2007-09-10  Dmitry Dulepov  <dmitry@typo3.org>

 * Added autoconfiguration feature

2007-07-09  Dmitry Dulepov  <dmitry@typo3.org>

 * Fixed error in regular expression

2007-01-24  Dmitry Dulepov  <dmitry@typo3.org>

 * Removed enableDomainLookup and rootPageID from another place in the manual (thanks to Chris Paige for noticing it!)

2007-01-12  Dmitry Dulepov  <dmitry@typo3.org>

 * Release of RealURL 1.1.4

2007-01-04  Dmitry Dulepov  <dmitry@typo3.org>

 * Fixed bug 4007: realurl path in workspace is kept when published
 * Fixed bug 4395: Specified key was too long; max key length is 1000 bytes
 * Fixed bug 4485: RealURLs with no spaceCharacter
 * Fixed bug 4528: Deprecated function in documentation
 * Fixed bug 4559: Fails to crate/update table tx_realurl_uniqalias when db is set to utf8 with max key restriction
 * Renamed isInFEEditing() to IsBEUserLoggedIn()
 * Added tx_realurl_pathcache to list of table for clearing when all cache is cleared

2006-10-13  Dmitry Dulepov  <dmitry@typo3.org>

 * enableDomainLookup and rootPageID is removed from manual.sxw because they do not exist
 * Added TS log message in case if root page cannot be determined from configuration

2006-10-06  Dmitry Dulepov  <dmitry@typo3.org>

 * Release of RealURL 1.1.3

2006-10-06  Dmitry Dulepov  <dmitry@typo3.org>

 * Fixed compatibility issue for wrong realurl configuration (see bug #4352)
 * Updated class/function index

2006-10-05  Dmitry Dulepov  <dmitry@typo3.org>

 * Release of RealURL 1.1.2

2006-10-05  Dmitry Dulepov  <dmitry@typo3.org>

 * Added patch by Andreas Otto (field order and sorting in mod1 for Redirect view)
 * Fixed bug 1530: defaultToHTMLsuffixOnPrev has to be cleaned in decodeSpURL
 * Fixed bug 2439: [RealURL] Prepend domain name before path in realurl modules