@@ -2,6 +2,7 @@
 
  * Fixed bug 4994: tx_realurl_pathcache must not be flushed!
  * Fixed bug 5150: Remove tx_realurl_pathcache table from MySQL Query Cache
+ * Fixed bug 6257: pointless rootline lookup in multi-domain enviroment
 
 2007-09-10  Dmitry Dulepov  <dmitry@typo3.org>
 
